--- a/src/main/resources/fxml/teamScreen.fxml
+++ b/src/main/resources/fxml/teamScreen.fxml
@@ -17,7 +17,7 @@
 
 <VBox alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="name" text="Nazwa Druzyny">
+      <Label fx:id="nameLabel" text="Nazwa Druzyny">
          <font>
             <Font name="Arial Bold" size="41.0" />
          </font>
@@ -58,27 +58,27 @@
                         <Cursor fx:constant="HAND" />
                      </cursor></Label>
                   <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Data zalozenia" GridPane.rowIndex="1" />
-                  <Label fx:id="date" maxWidth="1.7976931348623157E308" text="Label" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
+                  <Label fx:id="dateLabel" maxWidth="1.7976931348623157E308" text="Label" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="20.0" />
                      </font></Label>
                   <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Ilosc puntkow" GridPane.rowIndex="2" />
-                  <Label fx:id="points" maxWidth="1.7976931348623157E308" text="Label" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2">
+                  <Label fx:id="pointsLabel" maxWidth="1.7976931348623157E308" text="Label" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2">
                      <font>
                         <Font name="System Bold" size="20.0" />
                      </font></Label>
                   <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Wygrane" GridPane.rowIndex="3" />
                   <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Remisy" GridPane.rowIndex="4" />
                   <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Przegrane" GridPane.rowIndex="5" />
-                  <Label fx:id="wins" maxWidth="1.7976931348623157E308" text="Label" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
+                  <Label fx:id="winsLabel" maxWidth="1.7976931348623157E308" text="Label" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
                      <font>
                         <Font name="System Bold" size="20.0" />
                      </font></Label>
-                  <Label fx:id="draws" maxWidth="1.7976931348623157E308" text="Label" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4">
+                  <Label fx:id="drawsLabel" maxWidth="1.7976931348623157E308" text="Label" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4">
                      <font>
                         <Font name="System Bold" size="20.0" />
                      </font></Label>
-                  <Label fx:id="loses" maxWidth="1.7976931348623157E308" text="Label" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5">
+                  <Label fx:id="losesLabel" maxWidth="1.7976931348623157E308" text="Label" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5">
                      <font>
                         <Font name="System Bold" size="20.0" />
                      </font></Label>
