--- a/src/main/resources/fxml/footballersTableScreen.fxml
+++ b/src/main/resources/fxml/footballersTableScreen.fxml
@@ -4,8 +4,10 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.LinearGradient?>
@@ -26,10 +28,15 @@
                </stops>
             </LinearGradient>
          </textFill>
-         <VBox.margin>
-            <Insets bottom="20.0" />
-         </VBox.margin>
       </Label>
+      <HBox alignment="CENTER_RIGHT">
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin>
+         <children>
+            <TextField fx:id="searchTextField" onAction="#searchElements" prefHeight="30.0" prefWidth="200.0" promptText="Szukaj" stylesheets="@../css/label.css" />
+         </children>
+      </HBox>
       <GridPane>
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
@@ -73,7 +80,7 @@
       </GridPane>
       <ScrollPane fitToWidth="true" maxHeight="700.0" vbarPolicy="ALWAYS">
          <content>
-            <GridPane fx:id="gridPane">
+            <GridPane fx:id="gridPane" alignment="CENTER" maxWidth="1.7976931348623157E308">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
