--- a/src/main/resources/fxml/tableScreen.fxml
+++ b/src/main/resources/fxml/tableScreen.fxml
@@ -4,8 +4,10 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.LinearGradient?>
@@ -30,6 +32,14 @@
             </LinearGradient>
          </textFill>
       </Label>
+      <HBox alignment="CENTER_RIGHT">
+         <children>
+            <TextField fx:id="searchTextField" onAction="#searchElements" prefHeight="30.0" prefWidth="200.0" promptText="Szukaj" stylesheets="@../css/label.css" />
+         </children>
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin>
+      </HBox>
       <GridPane alignment="CENTER" maxHeight="1.7976931348623157E308">
         <columnConstraints>
             <ColumnConstraints hgrow="NEVER" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" />
